--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -55,3 +55,8 @@ performance {
   serialization = "object"
   useBroadcast = true
 }
+modelResolver {
+  jslResolver {
+    registryFile = "http://127.0.0.1/registry.json"
+  }
+}
