WIP: Resolvers   - Tested basic usage with CorpusManager

--- a/.gitignore
+++ b/.gitignore
@@ -300,6 +300,7 @@ project/plugins/project/
 
 ### Local ###
 tmp_pipeline/
+test_*_pipeline/
 test-output-tmp/
 spark-warehouse/
 /python/python.iml
