--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -60,3 +60,8 @@ modelResolver {
     registryFile = "http://127.0.0.1/registry.json"
   }
 }
+corpusResolver {
+  httpResolver {
+    registryUri = "https://s3.amazonaws.com/auxdata.johnsnowlabs.com/spark-nlp-resources/corpus-registry.json"
+  }
+}
