WIP: Working ModelManager base

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -65,3 +65,9 @@ corpusResolver {
     registryUri = "https://s3.amazonaws.com/auxdata.johnsnowlabs.com/spark-nlp-resources/corpus-registry.json"
   }
 }
+
+modelResolver {
+  httpResolver {
+    registryUri = "https://s3.amazonaws.com/auxdata.johnsnowlabs.com/spark-nlp-resources/model-registry.json"
+  }
+}
